(feat) complete development integration of backend